fixed overflow on introscreen

--- a/css/intro.css
+++ b/css/intro.css
@@ -23,12 +23,14 @@
   z-index: 10;
 }
 
-.intro {
+#intro {
   height: 100vh;
-  overflow: hidden;
+width: 100%;
+overflow-y: hidden;
+
 }
 
-.intro h3 {
+#intro h3 {
   font-family: Archia SemiBold;
   color: #A5A5A5;
 }
